assets/css/style.css
:root {
    --red: #DC3545;
    --amber: #FFC107;
    --light-amber: #FFD65C;
    --green: #67C93E;
}

body {
    margin: 0;
    width: 100vw;
    height: 100vh;
    background: url('../images/farmyard-background.jpg') no-repeat center top;
    background-size: contain;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    font-family: 'Short Stack', cursive;
}

header {
    height: 10vh;
}

.menu {
    position: fixed;
    top: 0;
    left: 0;
    margin: 10px;
}

.sound {
    position: fixed;
    top: 0;
    right: 0;
    margin: 10px;
}

.hidden {
    display: none;
}

.game-area {
    height: 80vh;
}

#question-area {
    height: 80vh;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    align-content: space-around;
    padding-top: 50px;
}

.img-fluid {
    max-width: 33%;
    max-height: 30%;
}

#options-area {
    height: 80vh;
    display: flex;
    flex-flow: column wrap;
    justify-content: space-around;
    align-content: center;
}

.high-scores-btn {
    position: fixed;
    left: 0;
    bottom: 0;
    margin: 10px;
}

.score-area {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    font-size: 2rem;
}

.score-area i {
    size: 30px;
    padding-right: 10px;
    margin: 0;
}

.scores {
    margin: 10px;
}

.no-hover {
    pointer-events: none;
}

/* Modals */

.modal-background {
    background-color: var(--light-amber);
}

.modal-header {
    justify-content: center;
    border: none;
    padding-bottom: 8px;
    display: block;
}

.modal-image {
    height: 30vh;
    background: 
}

.view-scores {
    padding: 6px;
}

.stored-scores-display {
    font-size: smaller;
}

#stars {
    font-size: x-large;
    padding-top: 16px;
}

#trophy img {
    height: 40vh;
}

#trophy {
    height: 50vh;
    width: 50vh;
    background: var(--green);
    border-radius: 50%;
    padding-top: 6vh;
}

.modal-body {
    padding: 8px;
}

.modal-body p {
    font-size: larger;
    padding-top: 8px;
}

.modal-footer {
    display:flex;
    justify-content: space-around;
    border: none;
    padding-top: 8px;
}

/* Media Queries */

@media screen and (max-width: 480px) {
    .img-fluid {
        max-width: 50%;
        max-height: 20%;
    }
}

@media screen and (min-width: 530px) {
    .small-screen-br {
        display: none;
    }
    .high-scores-btn {
        font-size: 24px;
    }
}

@media screen and (max-width: 450px) {
    .scores {
        padding: 8px;
        margin-left: 5px;
        margin-right: 5px;
    }
}

@media screen and (max-width: 360px) {
    .score-area i {
        padding-right: 0px;
    }
    .scores {
        padding: 8px 2px;
    }
}

